--- a/ChromeDB.ipynb
+++ b/ChromeDB.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Skipping hnswlib as it is not installed.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -60,15 +74,13 @@
       "Requirement already satisfied: durationpy>=0.7 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from kubernetes>=28.1.0->chromadb) (0.7)\n",
       "Requirement already satisfied: coloredlogs in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from onnxruntime>=1.14.1->chromadb) (15.0.1)\n",
       "Requirement already satisfied: flatbuffers in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from onnxruntime>=1.14.1->chromadb) (24.3.25)\n",
-      "Requirement already satisfied: protobuf in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from onnxruntime>=1.14.1->chromadb) (5.28.2)\n",
+      "Requirement already satisfied: protobuf in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from onnxruntime>=1.14.1->chromadb) (4.25.5)\n",
       "Requirement already satisfied: sympy in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from onnxruntime>=1.14.1->chromadb) (1.12)\n",
       "Requirement already satisfied: deprecated>=1.2.6 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from opentelemetry-api>=1.2.0->chromadb) (1.2.14)\n",
       "Requirement already satisfied: importlib-metadata<=8.4.0,>=6.0 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from opentelemetry-api>=1.2.0->chromadb) (7.0.1)\n",
       "Requirement already satisfied: googleapis-common-protos~=1.52 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from opentelemetry-exporter-otlp-proto-grpc>=1.2.0->chromadb) (1.65.0)\n",
       "Requirement already satisfied: opentelemetry-exporter-otlp-proto-common==1.27.0 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from opentelemetry-exporter-otlp-proto-grpc>=1.2.0->chromadb) (1.27.0)\n",
       "Requirement already satisfied: opentelemetry-proto==1.27.0 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from opentelemetry-exporter-otlp-proto-grpc>=1.2.0->chromadb) (1.27.0)\n",
-      "Collecting protobuf (from onnxruntime>=1.14.1->chromadb)\n",
-      "  Using cached protobuf-4.25.5-cp310-abi3-win_amd64.whl.metadata (541 bytes)\n",
       "Requirement already satisfied: opentelemetry-instrumentation-asgi==0.48b0 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from opentelemetry-instrumentation-fastapi>=0.41b0->chromadb) (0.48b0)\n",
       "Requirement already satisfied: opentelemetry-instrumentation==0.48b0 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from opentelemetry-instrumentation-fastapi>=0.41b0->chromadb) (0.48b0)\n",
       "Requirement already satisfied: opentelemetry-semantic-conventions==0.48b0 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from opentelemetry-instrumentation-fastapi>=0.41b0->chromadb) (0.48b0)\n",
@@ -102,81 +114,52 @@
       "Requirement already satisfied: mpmath>=0.19 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from sympy->onnxruntime>=1.14.1->chromadb) (1.3.0)\n",
       "Requirement already satisfied: pyreadline3 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from humanfriendly>=9.1->coloredlogs->onnxruntime>=1.14.1->chromadb) (3.5.4)\n",
       "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in c:\\users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth>=1.0.1->kubernetes>=28.1.0->chromadb) (0.4.8)\n",
-      "Using cached protobuf-4.25.5-cp310-abi3-win_amd64.whl (413 kB)\n",
-      "Installing collected packages: protobuf\n",
-      "  Attempting uninstall: protobuf\n",
-      "    Found existing installation: protobuf 5.28.2\n",
-      "    Uninstalling protobuf-5.28.2:\n",
-      "      Successfully uninstalled protobuf-5.28.2\n",
-      "Successfully installed protobuf-4.25.5\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  WARNING: Failed to remove contents in a temporary directory 'C:\\Users\\atulv\\anaconda3\\envs\\dev\\Lib\\site-packages\\google\\~~pb'.\n",
-      "  You can safely remove it manually.\n",
-      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "grpcio-status 1.66.1 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 4.25.5 which is incompatible.\n",
-      "streamlit 1.30.0 requires packaging<24,>=16.8, but you have packaging 24.1 which is incompatible.\n"
      ]
     }
    ],
    "source": [
-    "%pip install chromadb "
+    "\n",
+    "%pip install chromadb \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import chromadb\n",
-    "\n",
-    "chroma_Cleint = chromadb.Client()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'chroma_Cleint' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m collection \u001b[38;5;241m=\u001b[39m \u001b[43mchroma_Cleint\u001b[49m\u001b[38;5;241m.\u001b[39mcreate_collection(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmy_collection2\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'chroma_Cleint' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "collection = chroma_Cleint.create_collection(name=\"my_collection2\")"
+    "import os\n",
+    "#chroma_Cleint = chromadb.Client()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "current_dir = os.getcwd()\n",
+    "data_folder= os.path.join(current_dir,\"data\")\n",
+    "client = chromadb.PersistentClient(path=data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = client.create_collection(name=\"my_collection4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "collection.add(\n",
     "    documents=[\n",
@@ -185,6 +168,27 @@
     "    ],\n",
     "    ids=[\"id1\", \"id2\"]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ids': [['id1', 'id2']], 'distances': [[1.0404008937271816, 1.2430800215233073]], 'metadatas': [[None, None]], 'embeddings': None, 'documents': [['This is a document about pineapple', 'This is a document about oranges']], 'uris': None, 'data': None, 'included': ['metadatas', 'documents', 'distances']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = collection.query(\n",
+    "    query_texts=[\"This is a query document about hawaii\"], # Chroma will embed this for you\n",
+    "    n_results=2 # how many results to return\n",
+    ")\n",
+    "print(results)\n"
    ]
   },
   {
