--- a/llama_pdf_reader_v4.ipynb
+++ b/llama_pdf_reader_v4.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\atulv\\anaconda3\\envs\\dev\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import chromadb\n",
     "from llama_index.core import PromptTemplate\n",
@@ -39,77 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linear regression is a fundamental concept in statistics and machine learning that helps predict a continuous outcome variable based on one or more predictor variables. It's a simple yet powerful technique for modeling the relationship between a dependent variable (y) and one or more independent variables (x).\n",
-      "\n",
-      "**Key components:**\n",
-      "\n",
-      "1. **Dependent variable (y):** The variable you're trying to predict or explain, often denoted as \"y\" or \"target\".\n",
-      "2. **Independent variables (x):** The variables that are used to predict the dependent variable, often denoted as \"x\" or \"features\".\n",
-      "3. **Relationship:** Linear regression assumes a linear relationship between the independent and dependent variables.\n",
-      "\n",
-      "**How it works:**\n",
-      "\n",
-      "The goal of linear regression is to find the best-fitting line (or hyperplane in higher dimensions) that minimizes the sum of squared errors between predicted values and actual observations. This is done by adjusting the coefficients of the independent variables, which are used to create a weighted sum of these variables.\n",
-      "\n",
-      "**Linear Regression Equation:**\n",
-      "\n",
-      "The linear regression equation takes the form:\n",
-      "\n",
-      "y = β0 + β1x1 + β2x2 + … + ε\n",
-      "\n",
-      "where:\n",
-      "\n",
-      "* y is the dependent variable\n",
-      "* x1, x2, etc. are the independent variables\n",
-      "* β0 is the intercept or constant term\n",
-      "* β1, β2, etc. are the coefficients of each independent variable\n",
-      "* ε represents the error term (residuals)\n",
-      "\n",
-      "**Types of Linear Regression:**\n",
-      "\n",
-      "There are two main types:\n",
-      "\n",
-      "1. **Simple Linear Regression:** One independent variable.\n",
-      "2. **Multiple Linear Regression:** Two or more independent variables.\n",
-      "\n",
-      "**Assumptions:**\n",
-      "\n",
-      "Linear regression assumes that:\n",
-      "\n",
-      "* The relationship between the independent and dependent variables is linear.\n",
-      "* The residuals (ε) are normally distributed with a mean of 0.\n",
-      "* There is no multicollinearity among the independent variables.\n",
-      "\n",
-      "**Common Applications:**\n",
-      "\n",
-      "Linear regression has numerous applications, including:\n",
-      "\n",
-      "1. **Predicting continuous outcomes:** Stock prices, energy consumption, etc.\n",
-      "2. **Anomaly detection:** Identifying unusual patterns in data.\n",
-      "3. **Regression analysis:** Analyzing the relationship between a dependent variable and one or more independent variables.\n",
-      "\n",
-      "I hope this explanation helps you understand linear regression! Do you have any specific questions about it?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Check to see if Llama has been initialized\n",
     "#llm = Ollama(model=\"llama3.1:latest\")\n",
     "llm = Ollama(model=\"llama3.1:latest\", request_timeout=3000.0)\n",
-    "response = llm.complete(\"What is linear regression?\")\n",
-    "print(response)"
+    "#response = llm.complete(\"What is linear regression?\")\n",
+    "#print(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,21 +54,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_dir = os.getcwd()\n",
+    "data_folder= os.path.join(current_dir,\"data\")\n",
+    "chroma_client = chromadb.PersistentClient(path=data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Delete the existing collection if it exists\n",
+    "if \"ollama4\" in chroma_client.list_collections():\n",
+    "    chroma_client.delete_collection(\"ollama4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Define the path to the folder containing the PDFs\n",
     "pdf_folder_path = \"C:\\AI BootCamp\\MyRepo\\RAG_LLAM3\\PDF\"\n",
@@ -203,27 +147,45 @@
     "\n",
     "\n",
     "# Create a unified index\n",
-    "chroma_client = chromadb.EphemeralClient()\n",
+    "#chroma_client = chromadb.EphemeralClient()\n",
     "\n",
-    "# Delete the existing collection if it exists\n",
-    "if \"ollama\" in chroma_client.list_collections():\n",
-    "    chroma_client.delete_collection(\"ollama\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "os.environ['TF_ENABLE_ONEDNN_OPTS'] = '0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "#Create pipeline for indexing and retrieving documents using vector database\n",
-    "chroma_collection = chroma_client.create_collection(\"ollama\")\n",
+    "chroma_collection = chroma_client.create_collection(\"ollama5\")\n",
     "vector_store = ChromaVectorStore(chroma_collection=chroma_collection)\n",
     "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "index = VectorStoreIndex.from_documents(\n",
     "    all_content, \n",
     "    storage_context=storage_context, \n",
     "    embed_model=embed_model, \n",
-    "    transformations=[SentenceSplitter(chunk_size=256, chunk_overlap=10)]\n",
+    "    transformations=[SentenceSplitter(chunk_size=256, chunk_overlap=10)],\n",
+    "    \n",
+    "\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +208,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U07NH4J03D4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_bot_user_id():\n",
+    "    \"\"\"\n",
+    "    Get the bot user ID using the Slack API.\n",
+    "    Returns:\n",
+    "        str: The bot user ID.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Initialize the Slack client with your bot token\n",
+    "        slack_client = WebClient(token=os.environ[\"SLACK_BOT_TOKEN\"])\n",
+    "        response = slack_client.auth_test()\n",
+    "        return response[\"user_id\"]\n",
+    "    except SlackApiError as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "\n",
+    "\n",
+    "def my_function(text):\n",
+    "    \"\"\"\n",
+    "    Custom function to process the text and return a response.\n",
+    "    In this example, the function converts the input text to uppercase.\n",
+    "\n",
+    "    Args:\n",
+    "        text (str): The input text to process.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The processed text.\n",
+    "    \"\"\"\n",
+    "    response = text.upper()\n",
+    "    return response\n",
+    "\n",
+    "print(get_bot_user_id())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,9 +289,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student, I'm happy to help!\n",
+      "\n",
+      "Your question is not related to Artificial Intelligence, but rather a straightforward inquiry about Rohini Patil's phone number.\n",
+      "\n",
+      "To answer your question directly: According to the email you provided, Rohini Patil's phone number is +1 704 502 2766.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(query_engine.query(\"what is rohinis phone number\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:3000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [24/Sep/2024 14:38:02] \"POST /slack/events HTTP/1.1\" 401 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:38:21] \"POST /slack/events HTTP/1.1\" 401 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:41:09] \"GET / HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:41:09] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:41:33] \"GET / HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:41:51] \"GET / HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:41:56] \"GET / HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:53:46] \"GET / HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:53:49] \"GET / HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:53:50] \"GET / HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:55:22] \"POST /slack/events HTTP/1.1\" 401 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:55:35] \"POST /slack/events HTTP/1.1\" 401 -\n",
+      "127.0.0.1 - - [24/Sep/2024 14:55:40] \"POST /slack/events HTTP/1.1\" 401 -\n"
+     ]
+    }
+   ],
    "source": [
     "#Create a Slack WebClient for sending messages\n",
     "@app.event(\"app_mention\")\n",
@@ -302,7 +362,8 @@
     "    text = text.replace(mention, \"\").strip()\n",
     "\n",
     "    say(\"Great question! Let me find the answer for you.\")\n",
-    "    response = query_engine.query(text)\n",
+    "    #response = query_engine.query(text)\n",
+    "    response = my_function(text)\n",
     "    say(response.response)\n",
     "\n",
     "\n",
@@ -320,7 +381,7 @@
     "\n",
     "# Run the Flask app\n",
     "if __name__ == \"__main__\":\n",
-    "    flask_app.run()"
+    "    flask_app.run(port=3000)"
    ]
   }
  ],
